--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.ai.openai.api-key = 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
+spring.ai.openai.api-key = ${OPEN_AI_TOKEN}
 spring.ai.openai.chat.options.model = gpt-4o-mini
-#spring.ai.openai.chat.options.response-format.type = JSON_OBJECT
 
-spring.ai.mistralai.api-key = u8OdbYNXolgfaHin6GBFuuu7495YxMfT
+spring.ai.mistralai.api-key = ${MISTRAL_AI_TOKEN}
 
 spring.ai.ollama.chat.options.model = llama3.2
