--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
     <properties>
         <java.version>21</java.version>
         <spring-ai.version>1.0.0-M5</spring-ai.version>
+        <sonar.projectKey>piomin_spring-ai-showcase</sonar.projectKey>
+        <sonar.organization>piomin</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
