Adding stock ai functions (3)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.ai.openai.chat.options.model = gpt-4o-mini
 spring.ai.mistralai.api-key = ${MISTRAL_AI_TOKEN}
 
 spring.ai.ollama.chat.options.model = llama3.2
+
+spring.jpa.database-platform = H2
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = create-drop
