--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.ai.ollama.chat.options.model = llama3.2
 spring.jpa.database-platform = H2
 spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto = create-drop
+
+logging.level.org.springframework.ai = DEBUG
