--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ logging.level.org.springframework.ai = DEBUG
 #spring.ai.openai.embedding.lazy-init = true
 
 #spring.ai.vectorstore.chroma.collection-name = stock
-spring.ai.vectorstore.chroma.initialize-schema = true
+#spring.ai.vectorstore.chroma.initialize-schema = true
 
 spring.ai.vectorstore.pinecone.apiKey = ${PINECONE_TOKEN}
 spring.ai.vectorstore.pinecone.environment = aped-4627-b74a
