--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.ai.openai.api-key = ${OPEN_AI_TOKEN}
 
 spring.ai.mistralai.api-key = ${MISTRAL_AI_TOKEN}
+spring.ai.mistralai.chat.options.model = mistral-large-latest
 
 spring.ai.ollama.chat.options.model = llama3.2
 
