Adding Azure OpenAI (2)

--- a/src/main/resources/application-azure-ai.properties
+++ b/src/main/resources/application-azure-ai.properties
@@ -1,2 +1,8 @@
 spring.ai.azure.openai.api-key = ${AZURE_OPENAI_API_KEY}
 spring.ai.azure.openai.endpoint = https://piomin-azure-openai.openai.azure.com/
+spring.ai.azure.openai.image.options.deployment-name = dall-e-3
+spring.ai.vectorstore.cosmosdb.endpoint = https://piomin-ai-cosmos.documents.azure.com:443/
+spring.ai.vectorstore.cosmosdb.key = ${AZURE_VECTORSTORE_API_KEY}
+spring.ai.vectorstore.cosmosdb.databaseName = spring-ai
+spring.ai.vectorstore.cosmosdb.containerName = spring-ai
+spring.ai.vectorstore.cosmosdb.partitionKeyPath = /id
