--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
                     <groupId>org.springframework.ai</groupId>
                     <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
                 </dependency>
+                <dependency>
+                    <groupId>org.springframework.ai</groupId>
+                    <artifactId>spring-ai-pinecone-store-spring-boot-starter</artifactId>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
@@ -71,6 +75,10 @@
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
                     <artifactId>spring-ai-mistral-ai-spring-boot-starter</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.ai</groupId>
+                    <artifactId>spring-ai-pinecone-store-spring-boot-starter</artifactId>
                 </dependency>
             </dependencies>
         </profile>
@@ -81,6 +89,10 @@
                     <groupId>org.springframework.ai</groupId>
                     <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
                 </dependency>
+                <dependency>
+                    <groupId>org.springframework.ai</groupId>
+                    <artifactId>spring-ai-pinecone-store-spring-boot-starter</artifactId>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
@@ -90,6 +102,10 @@
                     <groupId>org.springframework.ai</groupId>
                     <artifactId>spring-ai-azure-openai-spring-boot-starter</artifactId>
                 </dependency>
+<!--                <dependency>-->
+<!--                    <groupId>org.springframework.ai</groupId>-->
+<!--                    <artifactId>spring-ai-azure-cosmos-db-store-spring-boot-starter</artifactId>-->
+<!--                </dependency>-->
             </dependencies>
         </profile>
         <profile>
