--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: Analyze on SonarCloud
-          command: mvn verify sonar:sonar
+          command: mvn verify sonar:sonar -DskipTests
 
 executors:
   jdk:
@@ -23,5 +23,6 @@ workflows:
     jobs:
       - maven/test:
           executor: jdk
+          context: OpenAI
       - build:
           context: SonarCloud
