--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,15 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-pinecone-store-spring-boot-starter</artifactId>
+            <artifactId>spring-ai-starter-vector-store-pinecone</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-advisors-vector-store</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-rag</artifactId>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.ai</groupId>-->
@@ -61,7 +69,11 @@
             <dependencies>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
-                    <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+                    <artifactId>spring-ai-starter-model-openai</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework.ai</groupId>
+                    <artifactId>spring-ai-autoconfigure-model-openai</artifactId>
                 </dependency>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
@@ -74,7 +86,7 @@
             <dependencies>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
-                    <artifactId>spring-ai-mistral-ai-spring-boot-starter</artifactId>
+                    <artifactId>spring-ai-starter-model-mistral-ai</artifactId>
                 </dependency>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
@@ -87,7 +99,7 @@
             <dependencies>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
-                    <artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
+                    <artifactId>spring-ai-starter-model-ollama</artifactId>
                 </dependency>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
@@ -100,7 +112,7 @@
             <dependencies>
                 <dependency>
                     <groupId>org.springframework.ai</groupId>
-                    <artifactId>spring-ai-azure-openai-spring-boot-starter</artifactId>
+                    <artifactId>spring-ai-starter-model-azure-openai</artifactId>
                 </dependency>
 <!--                <dependency>-->
 <!--                    <groupId>org.springframework.ai</groupId>-->
