--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,14 @@ jobs:
     docker:
       - image: 'cimg/openjdk:25.0'
     steps:
-      - checkout
+      - git-shallow-clone/checkout_advanced:
+          clone_options: '--filter=blob:none'
+      - run:
+          name: "Git fetch"
+          command: git fetch --no-filter --refetch
       - run:
           name: Analyze on SonarCloud
-          command: mvn verify sonar:sonar -DskipTests
+          command: mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -DskipTests
 
 executors:
   jdk:
@@ -17,6 +21,7 @@ executors:
 
 orbs:
   maven: circleci/maven@2.1.1
+  git-shallow-clone: guitarrapc/git-shallow-clone@2.8.0
 
 workflows:
   maven_test:
