--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,10 @@
                     <groupId>org.springframework.ai</groupId>
                     <artifactId>spring-ai-starter-model-azure-openai</artifactId>
                 </dependency>
+                <dependency>
+                    <groupId>org.springframework.ai</groupId>
+                    <artifactId>spring-ai-starter-vector-store-pinecone</artifactId>
+                </dependency>
 <!--                <dependency>-->
 <!--                    <groupId>org.springframework.ai</groupId>-->
 <!--                    <artifactId>spring-ai-azure-cosmos-db-store-spring-boot-starter</artifactId>-->
@@ -145,21 +149,5 @@
             </plugin>
         </plugins>
     </build>
-
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>central</id>-->
-<!--            <name>Central</name>-->
-<!--            <url>https://repo1.maven.org/maven2/</url>-->
-<!--        </repository>-->
-<!--        <repository>-->
-<!--            <id>spring-milestones</id>-->
-<!--            <name>Spring Milestones</name>-->
-<!--            <url>https://repo.spring.io/milestone</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>false</enabled>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
-<!--    </repositories>-->
 
 </project>
