--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 logging.level.org.springframework.ai = DEBUG
 
-
+spring.ai.anthropic.chat.options.model = claude-opus-4-20250514
 #spring.ai.openai.embedding.model = text-embedding-ada-002
 #spring.ai.openai.embedding.lazy-init = true
 
